# Signet

./: .gitignore  2026-07-14-signet-approval-gateway-plan.md  LICENSE  README.md  SECURITY.md  hatch_build.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
deploy/: README.md  prepare-owned-directory.py  validate-private-paths.py
deploy/config/: production.example.json
deploy/hermes/: README.md  configure-demo-profile.py  configure-disabled-profile.py  demo-profile.mcp.yaml.example  disabled-profile.mcp.yaml.example  managed-routes.forward.diff.example  managed-routes.reverse.diff.example
deploy/hermes/runtime/: pyproject.toml
deploy/homepage/: services.signet.yaml.example
deploy/launchd/: ai.hermes.signet.mcp.plist.example  ai.hermes.signet.web.plist.example  render-disabled-plists.py
deploy/operations/: bypass-inventory.blocked.example.json  live-evidence.blocked.example.json
deploy/tailscale/: serve-merge.md
docs/: authenticator-management.md  deployment.md  mcp-approval-tools.md  mcp-client-integration.md  operator-runbook.md  plugin-integrations.md  plugin-readiness.md  policy-guide.md  production-connectors.md  production-runtime.md  security-model.md  setup.md  wacli-process-boundary.md
docs/man/: signet.1
docs/plans/: 2026-07-17-signet-productionization-plan.md
docs/reviews/: 02-security-contract.md
spec/: policy-v1.yaml
spec/fixtures/: fastmail-send-input.json  gateway-pending-result.json  gateway-tools-schemas.json  whatsapp-send-input.json
spec/providers/: fastmail-send-email-adapter-v1.json  wacli-owned-wrapper-v1.json
src/signet/: __init__.py  access_requests.py  admission.py  app.py  async_support.py  attachment_crypto.py  auth.py  authenticator_management.py  backup.py  browser_auth.py  canonical.py  config.py  connector_config.py  connector_discovery.py  credential_broker.py  crypto.py  db.py  decision_notes.py  delivery.py  demo.py  deployment.py  downstream.py  effects.py  execution_scope.py  expiry.py  extension_worker.py  freezer.py  gateway.py  gateway_tools.py  http_security.py  integration_cli.py  integration_store.py  integration_web_backend.py  mcp_mirror.py  models.py  notification_outbox.py  notifications.py  operations.py  plugin_manifest.py  policy.py  (+26 more)
src/signet/adapters/: __init__.py  base.py  fastmail.py  generic_json.py  tool_access.py  whatsapp.py
src/signet/migrations/: 0001_initial.sql  0002_persistent_auth.sql  0003_notification_outbox.sql  0004_retention_trigger.sql  0005_notification_deliveries.sql  0006_auth_rate_windows.sql  0007_encrypted_staged_objects.sql  0008_approval_admission_indexes.sql  0009_policy_persistence.sql  0010_schema_presence.sql  0011_web_decision_notes.sql  0012_mcp_caller_tokens.sql  0013_structured_decision_reasons.sql  0014_attachment_metadata_redaction.sql  0015_plugin_integrations.sql  0016_production_runtime.sql  0017_multi_authenticator.sql  0018_browser_auth.sql  0019_browser_auth_hardening.sql
src/signet/reference_plugins/: __init__.py
src/signet/reference_plugins/fastmail/: manifest.json  tools-list.json
src/signet/reference_plugins/telegram/: manifest.json  tools-list.json
src/signet/reference_plugins/whatsapp/: manifest.json  tools-list.json
src/signet/static/: app.css  app.js  authenticators.js  manifest.webmanifest  service-worker.js
src/signet/templates/: _request_review.html  audit.html  audit_event.html  authenticators.html  base.html  detail.html  error.html  integration_detail.html  integrations.html  login.html  queue.html  review_fragment.html  setup.html
tests/: __init__.py  attachment_fixtures.py  migration_helpers.py  test_access_requests.py  test_adapters_base.py  test_adapters_fastmail.py  test_adapters_provider_fixtures.py  test_adapters_whatsapp.py  test_attachment_crypto.py  test_auth.py  test_auth_persistence.py  test_auth_totp.py  test_auth_webauthn.py  test_authenticator_management.py  test_backup.py  test_browser_auth.py  test_browser_auth_e2e.py  test_browser_e2e.py  test_canonical_policy_staging.py  test_config_credentials.py  test_connector_config.py  test_connector_discovery.py  test_crypto.py  test_db.py  test_delivery.py  test_demo.py  test_deployment.py  test_downstream.py  test_effects.py  test_extension_worker.py  test_freezer.py  test_gateway.py  test_gateway_tools.py  test_hermes_demo_config.py  test_hermes_disabled_config.py  test_hermes_profile_transaction.py  test_http_security.py  test_integration_cli.py  test_integration_store.py  test_integration_web_backend.py  (+30 more)
