[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "signet"
version = "0.1.0"
description = "Provider-neutral MCP human approval gateway"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Signet contributors" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "aiosqlite>=0.20,<1",
  "argon2-cffi>=23.1,<26",
  "cryptography>=48.0.1,<49",
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "jsonschema>=4.23,<5",
  "keyring>=25.6,<27",
  "mcp==1.28.1",
  "pydantic==2.13.4",
  "pydantic-settings>=2.7,<3",
  "pyotp>=2.9,<3",
  "python-multipart>=0.0.20,<1",
  "pywebpush>=2.0,<3",
  "pyyaml>=6.0,<7",
  "uvicorn[standard]>=0.34,<1",
  "webauthn>=2.2,<3",
]

[project.urls]
Documentation = "https://github.com/bee-san/Signet/tree/main/docs"
Issues = "https://github.com/bee-san/Signet/issues"
Repository = "https://github.com/bee-san/Signet"

[project.scripts]
signet = "signet.app:main"

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.14,<2",
  "playwright==1.61.0",
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<2",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
  "types-jsonschema>=4.23,<5",
  "types-pyyaml>=6.0,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/signet"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]
xfail_strict = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["signet"]
