[project]
name = "signet-hermes-runtime"
version = "0.1.0"
description = "Locked Hermes Agent MCP runtime exercised by Signet"
requires-python = ">=3.12,<3.13"
dependencies = ["hermes-agent[mcp]==0.18.2"]

[tool.uv]
package = false
exclude-newer = "2026-07-09T00:00:00Z"
override-dependencies = [
  "cryptography==48.0.1",
  "mcp==1.28.1",
  "pillow==12.3.0",
  "starlette==1.3.1",
]
